# flyma-kwin-config

./: CMakeLists.txt  README.md
config/: kwinrc
plugins/: CMakeLists.txt
plugins/blur/: CMakeLists.txt  blur.h  blur.json
plugins/decoration/: CMakeLists.txt  boxshadowhelper.cpp  boxshadowhelper.h  button.cpp  closebutton.cpp  closebutton.h  decoration.cpp  decoration.h  maximizebutton.cpp  maximizebutton.h  minimizebutton.cpp  minimizebutton.h  panda.json
scripts/flymalauncher/: metadata.desktop
scripts/flymalauncher/contents/: main.js
scripts/pandalauncher/: metadata.desktop
scripts/pandalauncher/contents/: main.js
